--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,17 @@
 [bumpversion]
-current_version = 0.0.1
+current_version = 0.1.0
 commit = True
 tag = True
 tag_name = {new_version}
+
+[bumpversion:file:README.md]
+search = version = "{current_version}"
+replace = version = "{new_version}"
+
+[bumpversion:file:docs/index.md]
+search = version = "{current_version}"
+replace = version = "{new_version}"
+
+[bumpversion:file:locals.tf]
+search = module_version = "{current_version}"
+replace = module_version = "{new_version}"
