--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,7 @@ theme:
 
 nav:
   - Home: index.md
+  - Architecture: architecture.md
 
 markdown_extensions:
   - pymdownx.highlight:
@@ -61,6 +62,7 @@ markdown_extensions:
 
 plugins:
   - search
+  - glightbox
   - minify:
       minify_html: true
 
